syntax = "proto3";

option csharp_namespace = "GrpcClient.Game.Proto";

service Game {
	rpc InitGame (InitGameRequest) returns (InitGameResponse);
	rpc SetCurrentPlayer (SetCurrentPlayerRequest) returns (SetCurrentPlayerResponse);
	rpc MakeMove (MakeMoveRequest) returns (MakeMoveResponse);
}

message InitGameRequest{
	string id = 1;
	GameInfo gameInfo = 2;
}

message InitGameResponse{
}

message SetCurrentPlayerRequest{
	string id = 1;
}

message SetCurrentPlayerResponse{
}

message MakeMoveRequest{
	MoveInfo moveInfo = 1;
}

message MakeMoveResponse{
}

message NetworkPlayer {
	string ip = 1;
	int32 port = 2;
	string name = 3;
	PlayerState playerState = 4;
}

message GameInfo {
	int32 index = 1;
	repeated NetworkPlayer players = 2;

}

message Point{
	int32 x = 1;
	int32 y = 2;
}

message Prisoner{
	Point oldPoint = 1;
	Point newPoint = 2;
}

enum PlayerState{
	Unknown = 0;
	InLobby = 1;
	InGame = 2;
}

message MoveInfo {
	string id = 1;
	string playerName = 2;
	Prisoner prisoner = 3;
}